--- a/package.json
+++ b/package.json
@@ -27,8 +27,13 @@
     "@tiptap/pm": "^2.10.3",
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "highlight.js": "^11.11.0",
+    "jsonwebtoken": "^9.0.2",
     "lowlight": "^3.3.0",
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.9",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
