--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tiptap/pm": "^2.10.3",
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "highlight.js": "^11.11.0",
@@ -37,7 +38,8 @@
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-to-print": "^3.0.2"
   },
   "devDependencies": {
     "@types/highlight.js": "^9.12.4",
