--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-to-print": "^3.0.2"
+    "react-to-print": "^3.0.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/highlight.js": "^9.12.4",
