--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-icons": "^5.4.0",
     "react-to-print": "^3.0.2",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "sonner": "^1.7.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/highlight.js": "^9.12.4",
