--- a/package.json
+++ b/package.json
@@ -23,16 +23,20 @@
     "@tiptap/extension-paragraph": "^2.10.3",
     "@tiptap/extension-placeholder": "^2.10.3",
     "@tiptap/extension-text": "^2.10.3",
+    "@tiptap/extension-text-align": "^2.10.4",
     "@tiptap/extension-text-style": "^2.10.3",
     "@tiptap/pm": "^2.10.3",
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
+    "clsx": "^2.1.1",
     "highlight.js": "^11.11.0",
     "jsonwebtoken": "^9.0.2",
     "lowlight": "^3.3.0",
+    "lucide-react": "^0.469.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.9",
     "next": "15.1.0",
@@ -43,6 +47,8 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
