--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tiptap/extension-blockquote": "^2.10.3",
     "@tiptap/extension-bullet-list": "^2.10.3",
     "@tiptap/extension-code-block": "^2.10.3",
@@ -53,6 +55,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@babel/parser": "^7.26.3",
     "@types/highlight.js": "^9.12.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
